2008-07-07  Christian Neumair  <cneumair@gnome.org>

	* src/file-manager/fm-tree-view.c (got_activation_uri_callback),
	(button_pressed_callback), (fm_tree_view_activate_file):
	* src/nautilus-places-sidebar.c (open_selected_bookmark),
	(bookmarks_button_press_event_cb):
	Open in new tab on middle-click. Fix middle-click selection
	interaction.

2008-07-07  Christian Neumair  <cneumair@gnome.org>

	* src/file-manager/fm-list-view.c
	(activate_selected_items_alternate), (fm_list_view_did_not_drag),
	(button_press_callback), (key_press_callback),
	(fm_list_view_unmerge_menus), (fm_list_view_dispose),
	(fm_list_view_class_init):
	Override unmerge_menus() method. Open in new tab on middle-click.

2008-06-30  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-navigation-window.c (notebook_popup_menu_show):
	Only set move actions sensitive if tab can be moved to left/right. Add
	separator between move and close actions.

2008-06-29  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-window-manage-views.c
	(nautilus_window_slot_open_location_full):
	When opening a new window, use new window's active slot instead of
	re-using source slot in source window. Fixes spatial mode.

2008-06-29  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-navigation-window.c (real_open_slot):
	Remove obsolete multiview-TODO.

	* src/nautilus-window-slot.c (nautilus_window_slot_init),
	(nautilus_window_slot_remove_extra_location_widgets),
	(nautilus_window_slot_add_extra_location_widget):
	* src/nautilus-window-slot.h:
	Show/hide event box rather than extra widget container. Removes 1 px
	blue stripe displayed on top of newly-opened tab, before the view has
	been packed.

2008-06-29  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-application.c (save_session_to_file),
	(nautilus_application_load_session):
	Load slots from and save slots in session file.

2008-06-29  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-window-private.h: